// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseLink /> should change the link to a visited state after click 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="action.text.link.visited"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(268, 100%, 79%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should not change the button to a visited state after click 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="action.text.link.default"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(213, 89%, 56%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render button variant of link 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="action.text.link.default"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(213, 89%, 56%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render disabled button variant of link 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="action.text.link.disabled"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(218, 19%, 81%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render disabled information intent high contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.information.action.text.link.default.highContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(180, 100%, 97%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render disabled information intent low contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.information.action.text.link.default.lowContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(195, 100%, 31%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render disabled negative intent high contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.negative.action.text.link.default.highContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(0, 100%, 97%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render disabled negative intent low contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.negative.action.text.link.default.lowContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(8, 73%, 47%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render disabled neutral intent high contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.neutral.action.text.link.default.highContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(220, 27%, 98%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render disabled neutral intent low contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.neutral.action.text.link.default.lowContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(216, 27%, 36%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render disabled notice intent high contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.notice.action.text.link.default.highContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(32, 100%, 94%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render disabled notice intent low contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.notice.action.text.link.default.lowContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(38, 97%, 38%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render disabled positive intent high contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.positive.action.text.link.default.highContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(107, 100%, 96%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render disabled positive intent low contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.positive.action.text.link.default.lowContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(160, 100%, 26%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render icon only link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      alignItems="center"
      display="flex"
      paddingRight="spacing.0"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "paddingRight": 0,
          },
        ]
      }
    >
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        align="xMidYMid"
        bbHeight="16px"
        bbWidth="16px"
        fill="none"
        focusable={false}
        height="16px"
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width="16px"
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
            fill={4281042419}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
            fill={4281042419}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            clipRule={0}
            d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
            fill={4281042419}
            fillRule={0}
            propList={
              Array [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <Text
      color="action.text.link.default"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(213, 89%, 56%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    />
  </View>
</View>
`;

exports[`<BaseLink /> should render information intent high contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.information.action.text.link.default.highContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(180, 100%, 97%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render information intent low contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.information.action.text.link.default.lowContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(195, 100%, 31%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render link with default properties 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="action.text.link.default"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(213, 89%, 56%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render link with icon with default iconPosition 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      alignItems="center"
      display="flex"
      paddingRight="spacing.2"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "paddingRight": 4,
          },
        ]
      }
    >
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        align="xMidYMid"
        bbHeight="16px"
        bbWidth="16px"
        fill="none"
        focusable={false}
        height="16px"
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width="16px"
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
            fill={4281042419}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
            fill={4281042419}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            clipRule={0}
            d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
            fill={4281042419}
            fillRule={0}
            propList={
              Array [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <Text
      color="action.text.link.default"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(213, 89%, 56%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render link with icon with left iconPosition 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      alignItems="center"
      display="flex"
      paddingRight="spacing.2"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "paddingRight": 4,
          },
        ]
      }
    >
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        align="xMidYMid"
        bbHeight="16px"
        bbWidth="16px"
        fill="none"
        focusable={false}
        height="16px"
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width="16px"
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
            fill={4281042419}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
            fill={4281042419}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            clipRule={0}
            d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
            fill={4281042419}
            fillRule={0}
            propList={
              Array [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <Text
      color="action.text.link.default"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(213, 89%, 56%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render link with icon with right iconPosition 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="action.text.link.default"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(213, 89%, 56%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
    <View
      alignItems="center"
      display="flex"
      paddingLeft="spacing.2"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "paddingLeft": 4,
          },
        ]
      }
    >
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        align="xMidYMid"
        bbHeight="16px"
        bbWidth="16px"
        fill="none"
        focusable={false}
        height="16px"
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width="16px"
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
            fill={4281042419}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
            fill={4281042419}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            clipRule={0}
            d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
            fill={4281042419}
            fillRule={0}
            propList={
              Array [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`<BaseLink /> should render negative intent high contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.negative.action.text.link.default.highContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(0, 100%, 97%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render negative intent low contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.negative.action.text.link.default.lowContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(8, 73%, 47%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render neutral intent high contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.neutral.action.text.link.default.highContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(220, 27%, 98%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render neutral intent low contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.neutral.action.text.link.default.lowContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(216, 27%, 36%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render notice intent high contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.notice.action.text.link.default.highContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(32, 100%, 94%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render notice intent low contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.notice.action.text.link.default.lowContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(38, 97%, 38%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render positive intent high contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.positive.action.text.link.default.highContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(107, 100%, 96%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;

exports[`<BaseLink /> should render positive intent low contrast link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  <View
    alignItems="center"
    className="content-container"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      color="feedback.positive.action.text.link.default.lowContrast"
      fontSize={100}
      fontWeight="bold"
      lineHeight="m"
      style={
        Array [
          Object {
            "color": "hsla(160, 100%, 26%, 1)",
            "fontFamily": "Lato",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "center",
            "textDecorationLine": "none",
          },
        ]
      }
      textAlign="center"
      textDecorationLine="none"
    >
      Learn More
    </Text>
  </View>
</View>
`;
